<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_select_all"
        android:icon="@drawable/ic_menu_selectall_holo_dark"
        android:showAsAction="always"
        android:title="@string/select_all"/>
    <item
        android:id="@id/menu_copy"
        android:icon="@drawable/ic_menu_copy_holo_dark"
        android:showAsAction="always"
        android:title="@string/copy"/>
    <item
        android:id="@id/menu_cut"
        android:icon="@drawable/ic_menu_cut_holo_dark"
        android:showAsAction="always"
        android:title="@string/cut"/>
    <item
        android:id="@id/menu_paste"
        android:icon="@drawable/ic_menu_paste_holo_dark"
        android:showAsAction="always"
        android:title="@string/paste"/>

</menu>