<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" >
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/idChooserPathView"
            style="@android:style/TextAppearance.Holo.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/idChooserBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/idChooserInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_name"
                android:singleLine="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/idChooserBtnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/idChooserBtnOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ok" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/idChooserListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/idChooserBottomLayout"
            android:layout_below="@id/idChooserPathView" >
        </ListView>
    </RelativeLayout>

</LinearLayout>